--- a/views/health/dashboard.twig
+++ b/views/health/dashboard.twig
@@ -194,7 +194,7 @@
                       <td>
                           <div>{{ event.User.username }}</div>
                           <div class="small text-muted">
-                            {{ event.User.createdAt }}
+                            {{ event.createdAt }}
                           </div>
                       </td>
                       <td class="text-center">
