--- a/views/layout.twig
+++ b/views/layout.twig
@@ -19,6 +19,7 @@
     <title>{{ title }}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.css"/>
     <!-- Icons-->
     <link href="/@coreui/icons/css/coreui-icons.min.css" rel="stylesheet">
     <link href="/flag-icon-css/css/flag-icon.min.css" rel="stylesheet">
@@ -146,6 +147,7 @@
     <script src="/chart.js/dist/Chart.min.js"></script>
     <script src="/@coreui/coreui-plugin-chartjs-custom-tooltips/dist/js/custom-tooltips.min.js"></script>
     <script src="/javascripts/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.min.js"></script>
     {% block js %}{% endblock %}
   </body>
 </html>
