--- a/views/user/index.twig
+++ b/views/user/index.twig
@@ -40,6 +40,11 @@
                             Create Record
                         </a>
                     </td>
+                    <td>
+                        <a class="btn btn-primary" href="/backend/users/{{user.id}}/export-zip" role="button">
+                            Export Zip
+                        </a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
